gameshowCode/css/mainVideoPage.css
.mainVideoPage {
    position:absolute;
    left:100%;
    top:0;
    width:100%;
	min-height: 100vh;
	padding: 1.5rem;
	font-family: var(--font-sans);
	box-sizing: border-box;
}

.section-label {
	font-size: 2dvh;
	letter-spacing: 0.1em;
	text-transform: uppercase;
	color: var(--colorDark); /*5a3040*/
	margin: 0 0 0.75rem;
}

.divider {
	height: 0.4dvh;
	background: #3a1520;
	margin: 1.5rem 0;
}

.video-grid {
    display:flex;
    flex-direction:row;
    flex-wrap: wrap;
	gap: 2dvh;
}

.video-card {
	background: #0e060a;
	border: 0.3dvh solid #3a1520;
	border-radius: 1.2dvh;
	overflow: hidden;
    height:30dvh;
    width: 40dvh;
}

.video-feed {
	width: 100%;
    aspect-ratio: 16/9;
	background: #120810;
	display: flex;
	align-items: center;
	justify-content: center;
}

.video-feed > video {
    width:100%;
    height:100%;
}

.card-footer {
	padding: 2dvh 2.5dvh;
	display: flex;
	align-items: center;
	justify-content: space-between;
	border-top: 0.3dvh solid #3a1520;
}

.card-name {
	font-size: 2dvh;
	color: #7a4050;
	letter-spacing: 0.03em;
}

.card-actions {
	display: flex;
	gap: 1.2dvh;
}

.act-btn {
	background: transparent;
	border: 0.2dvh solid #3a1520;
	border-radius: 1dvh;
	padding: 0.5dvh 1dvh;
	font-size: 1.2dvh;
	color: var(--colorDark);
	cursor: pointer;
	font-family: var(--font-sans);
	letter-spacing: 0.03em;
	white-space: nowrap;
}

.act-btn:hover {
	border-color: var(--colorSecondary);
}

.act-btn.danger:hover {
	border-color: var(--colorSecondary);
}

.crowdMediaHolder > .video-card > .card-footer > .card-actions > .demoteButton {
    display:none;
}

.priorityMediaHolder > .video-card > .card-footer > .card-actions > .promoteButton {
    display:none;
}


.self-bar {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-bottom: 1.5rem;
}

.self-controls {
	display: flex;
	gap: 3dvh;
}

.ctrl-btn {
	background: #0e060a;
	border: 0.2dvh solid #3a1520;
	border-radius: 1.2dvh;
	padding: 1dvh 1dvh;
	font-size: 2dvh;
	color: var(--colorSecondary);
	cursor: pointer;
	font-family: var(--font-sans);
	letter-spacing: 0.04em;
	display: flex;
	align-items: center;
	gap: 6px;
}

.ctrl-btn:hover {
	border-color: #7a2535;
	color: #b06070;
}

.ctrl-icon {
	width: 2dvh;
	height: 2dvh;
	fill: none;
	stroke: currentColor;
	stroke-width: 1.5;
}

.page-title {
	font-size: 1rem;
	font-weight: 500;
    font-family:Grotesk;
	color: var(--colorText);
	margin: 0;
	letter-spacing: 0.02em;
}

.heartIcon {
	position:absolute;
	transform:translate(15dvh, -5dvh);
	text-align:center;
	font-size: 5dvh;
	display:none;
}

.card-footer {
	color:#7a4050;
}

